# prelude-cpp

./: CMakeLists.txt  LICENSE  README.rst  RELEASE
demo/: CMakeLists.txt  sqrt.cc  version.h.in
demo/maths/: CMakeLists.txt
